@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-855: RecordReaderWrapper swallows exceptions (aching)
+
   GIRAPH-848: Allowing plain computation with types being configurable (ikabiljo via majakabiljo)
 
   GIRAPH-854: fix for test fail due to GIRAPH-840 (pavanka via majakabiljo)
